--- a/recovery/root/ueventd.rc
+++ b/recovery/root/ueventd.rc
@@ -1,3 +1,5 @@
+import /ueventd.mt6768.rc
+
 firmware_directories /etc/firmware/ /odm/firmware/ /vendor/firmware/ /firmware/image/
 uevent_socket_rcvbuf_size 16M
 
